toolchain 环境变量缓存到配置目录